<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.ennis.barrett.popularmovies.MainActivity">
    <item
        android:id="@+id/action_sort_popular"
        android:orderInCategory="96"
        android:title="@string/action_fetch_popular"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_top_rated"
        android:orderInCategory="98"
        android:title="@string/action_fetch_top_rated"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_favorite"
        android:orderInCategory="99"
        android:title="@string/action_fetch_favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
