<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/original_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:elevation="10dp"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:singleLine="false"
            android:text="@string/uninitialized_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:translationZ="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/poster"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@android:drawable/ic_menu_report_image"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/uninitialized_date"
                    android:textColor="@android:color/black"
                    android:textIsSelectable="false"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:paddingBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\??? / 10.0"
                    android:id="@+id/vote_average2"
                    android:textStyle="bold|italic"
                    android:textSize="24sp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>

        <!-- currently can't get the stepSize working -->
        <RatingBar
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:stepSize="0.01" />
        <!-- TODO add a text view for when there is no vote_average -->

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/uninitialized_overview"
            android:textSize="14sp"
            android:padding="8dp" />
    </LinearLayout>

</ScrollView>
